# geresh

./: AUTHORS  CMakeLists.txt  INSTALL  MANUAL.he  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  basemenu.cc  basemenu.h  bidi.cc  bidi.h  bindings.cc  cmake_config.h.in  config.h.in  configure  configure.in  converters.cc  converters.h  dbg.cc  dbg.h  dialogline.cc  dialogline.h  directvect.h  dispatcher.h  editbox.cc  editbox.h  editbox2.cc  editor.cc  editor.h  event.cc  event.h  geresh_io.h  helpbox.cc  helpbox.h  inputline.cc  inputline.h  io.cc  (+42 more)
themes/: README.themes  arnold.thm  borland.thm  default.thm  default_bw.thm  green.thm  mc.thm  occult.thm
